--- a/rust-lib-ffi/Cargo.toml
+++ b/rust-lib-ffi/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust"
+name = "rust-lib-ffi"
 version = "0.1.0"
 authors = ["Gero Posmyk-Leinemann <gero.posmyk-leinemann@typefox.io>"]
 edition = "2018"
@@ -9,3 +9,4 @@ crate-type = ["cdylib"]
 
 [dependencies]
 libc = "0.2.2"
+rust-lib = { path = "../rust-lib" }
