wasmbindgen + usage in node!

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "license": "MIT",
     "workspaces": {
         "packages": [
-            "rust-lib-wasm/pkg",
+            "rust-lib-wasm/typescript",
             "nodejs"
         ]
     }
