--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "private": true,
     "scripts": {
-        "start": "node dist/main.js",
+        "run": "node dist/main.js",
         "build": "tsc",
         "watch": "tsc -w"
     },
